--- a/infra/k8s/services/ingress-srv.yaml
+++ b/infra/k8s/services/ingress-srv.yaml
@@ -10,6 +10,13 @@ spec:
     - host: lahacks.dev
       http:
         paths:
+          - path: /api/auth/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-srv
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
