--- a/infra/k8s/deployments/auth-depl.yaml
+++ b/infra/k8s/deployments/auth-depl.yaml
@@ -20,7 +20,7 @@ spec:
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
-                  name: jwt-secret
+                  name: dev-secrets
                   key: JWT_KEY
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
