fix(client): dev script

--- a/infra/k8s/services/ingress-srv.yaml
+++ b/infra/k8s/services/ingress-srv.yaml
@@ -10,7 +10,7 @@ spec:
     - host: lahacks.dev
       http:
         paths:
-          - path: /api/auth/?(.*)
+          - path: /api/users/?(.*)
             pathType: Prefix
             backend:
               service:
