--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -15,7 +15,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts'
+          - src: 'src/**/*.(ts|tsx)'
             dest: .
     - image: lukaflores/lahacks-auth
       context: auth
