--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "dev": " npm run start:css && react-scripts start",
-    "start:css": "tailwindcss -o src/styles/tailwind.css",
+    "start": "concurrently \"npm run start:css\" \"react-scripts start\"",
+    "dev": " npm run dev:css && react-scripts start",
+    "start:css": "tailwindcss -o src/styles/tailwind.css --watch",
+    "dev:css": "tailwindcss -o src/styles/tailwind.css",
     "build": "npm run build:css &&  GENERATE_SOURCEMAP=false CI=false react-scripts --max_old_space_size=4096 build",
     "build:css": "NODE_ENV=production tailwindcss -o src/styles/tailwind.css -m"
   },
